# lython

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresets.json.old  CMakeUserPresets.json  LICENSE  Makefile  README.html  README.md  README.rst  README2.md  TODO  build.zig  codecov.yml  conanfile.txt  coverage.csv  coverage.xml  evolution.html  index.CMakeCCompilerId.c.ac7af80852f3f8d0d12b7d6648641a13.html  index.CMakeCCompilerId.c.c79df98d79f6dacd77db9ec5f2a737f9.html  index.VkBootstrap.cpp.dbe43a3059b73987cf06e23091c54fb1.html  index.VkBootstrap.h.8211479f285403607476863a0720e0f8.html  index._logging.h.19b737ca7e2aa2fc1f94185f95b6d08e.html  index.allocator.cpp.132a36ce991ebee6464ed8c0e8f4d324.html  index.allocator.h.72cb78a833e9dcfb3dad9982262f835d.html  index.attribute.cpp.7bf9abf83e8c245045b736350809acef.html  index.attribute_test.cpp.eb994b2b64129fa1a81a96f3d8dadddf.html  index.bench.h.a9ac82ca06c7a7abe8919b3bce0c5472.html  index.bench_hash.cpp.863cb9f62c9b38a4aa51679a09137c38.html  index.bezier.cpp.aeee2c79467f26752b74b2f9da0f2e3f.html  index.bezier.h.3b29055b33e18dde80d77ba22a56b2b7.html  index.bindings.cpp.6b80c1703941cae3310328e2eb361bea.html  index.bindings.h.563a4c6701362236170214be2e163981.html  index.buffer.cpp.d237bda9ae48f9198293c72d66a3ca7f.html  index.buffer.h.cb50da062725c2c39942c5eb57caffde.html  index.builtin.cpp.a60d6498f7d144061ddc1f4045c49fbd.html  index.builtins.h.44bc3de46874107d47bbfb8358582dfd.html  (+119 more)
benchmarks/: CMakeLists.txt  bench.h  bench_hash.cpp
code/: code.ly  (+23 more)
dependencies/: CMakeLists.txt
dependencies/llvm/: build_windows.ps1  build_windows.sh
dependencies/toolset/: README.md
src/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  Types.h  colors.h  config.h  dtypes.cpp  dtypes.h  fmt.h  kmeta.h  lython.cpp  lython_inspector.cpp  lython_scratch.cpp  main.cpp  path_hack.cpp  path_hack.h  ptr.h  revision_data.h.in.cmake  trash_file.cpp
src/AbstractSyntaxTree/: CodeGen.cpp  Expression.cpp  Expression.h  Expressions.cpp  Expressions.h  Names.h  Operators.h  Scope.cpp  Scope.h  Types.cpp  Types.h
src/Generator/: Generator.h  Magic.cpp  Magic.h
src/Lexer/: Buffer.cpp  Buffer.h  Grammar.def  Grammar.h  Lexer.cpp  Lexer.h  Operators.h  Prelexer.cpp  Prelexer.h  Token.h  Tokens.cpp  Tokens.h
src/Logging/: logging.cpp  logging.h
src/Parser/: Declarations.cpp  Error.cpp  Error.h  Expressions.cpp  Grammar.cpp  Grammar.h  Module.cpp  Module.h  ObjectManager.cpp  ObjectManager.h  Parser.cpp  Parser.h  pexp.h
src/Sema/: SemanticAnalyse.h
src/Utilities/: allocator.cpp  allocator.h  metadata.cpp  metadata.h  optional.h  stack.h  trie.h
src/ast/: constant.h  expressions.cpp  expressions.h  fold.cpp  fold.h  interop.h  lisp.h  magic.h  meta.generated.cpp  meta.generated.h  names.cpp  names.h  native.cpp  native.h  nodekind.h  nodes.cpp  nodes.h  object.cpp  object.h  ops.h  print.cpp  print.h  sexpression.cpp  sexpression.h  visitor.h
src/builtin/: operators.cpp  operators.h  operators.inc  runtime.h
src/cli/: cli.cpp  command.h
src/compatibility/: compatibility.h
src/cuda/: CMakeLists.txt  main.cpp  main.cu
src/dependencies/: coz_wrap.h  fmt.h  formatter.h  xx_hash.cpp  xx_hash.h
src/interpreter/: interpreter.cpp  interpreter.h  value.cpp  value.h
src/lexer/: buffer.cpp  buffer.h  lexer.cpp  lexer.h  token.cpp  token.h  unlex.cpp  unlex.h
src/linter/: linter.cpp  linter.h
src/logging/: _logging.h  backtrace.cpp  backtrace.h  codeloc.h  exceptions.h  logger.cpp  logger.h  logging.cpp  logging.h  macros.h  new_assert.h
src/lowering/: SSA.cpp  SSA.h  lowering.cpp  lowering.h
src/math/: CMakeLists.txt  cuda_ide.h  gemm.cpp  gemm.h  gemm_cuda.cu  gemm_cuda.h  main.cpp
src/modules/: README.md
src/os/: os.h  posix.cpp  windows.cpp
src/parser/: declarations.cpp  expressions.cpp  format_spec.cpp  format_spec.h  function.cpp  import.cpp  kiwi_parser.cpp  kiwi_parser.h  loop.cpp  match.cpp  module.cpp  module.h  parser.cpp  parser.h  parser_ext.cpp  parser_xml.cpp  parsing_error.cpp  parsing_error.h  struct.cpp
src/perf/: perf.h
src/plugin/: example.cpp  example.h  plugin.h  webasm.cpp
src/printer/: error_printer.cpp  error_printer.h
src/sema/: bindings.cpp  bindings.h  builtin.cpp  builtin.h  cpython_type.cpp  errors.cpp  errors.h  importlib.cpp  importlib.h  native_module.h  sema.cpp  sema.h  sema_import.cpp
src/stdlib/: array.h  dict.h  garbage.cpp  garbage.h  garbage_linux.cpp  garbage_windows.cpp  hashtable.h  hastable.h  set.h  siphash.c  siphash.cpp  siphash.h  smalldict.h  tuple.h
src/tide/: CMakeLists.txt  ast_input.cpp  ast_input.h  ast_input_old.cpp  ast_render.cpp  ast_render.h  ast_render_old.h  ast_render_visitor.cpp  bezier.cpp  bezier.h  block.cpp  block.h  example.cpp  imgui_unity.cpp  interactive_parser.cpp  main.cpp  node.cpp  node.h
src/utilities/: allocator.cpp  allocator.cu  allocator.h  chrono.h  coz_wrap.h  debug.h  guard.h  helpers.h  magic.h  metadata.cpp  metadata.h  metadata_1.h  metadata_2.h  metadata_3.h  metadata_method.h  names.cpp  names.h  object.cpp  object.h  optional.h  pool.cpp  pool.h  printing.h  scope.h  stack.h  stopwatch.h  strings.cpp  strings.h  trie.h
src/vm/: builtins.h  garbage_collector.cpp  garbage_collector.h  tree.cpp  tree.h  tree_old.cpp  tree_old.h  vm.cpp  vm.h
src/wasm/: ext.cpp  interface.cpp  interface.h
tests/: .main_test.cpp.swp  CMakeLists.txt  attribute_test.cpp  cases.cpp  cases.h  cases_errors.cpp  cases_errors.h  cases_sample.cpp  cases_vm.cpp  cases_vm.h  docgen.cpp  equality_test.cpp  export.cpp  garbage.cpp  garbage_test.cpp  hashtable_test.cpp  interpreter_test.cpp  interpreter_test.h  lexer_test.cpp  lexer_test.h  libtest.cpp  libtest.h  libtest_fuzzer_ast.cpp  libtest_fuzzer_grammar.cpp  libtest_generator.h  llvm_test.cpp  logging_test.cpp  main.cpp  main_test.cpp  meta_test.cpp  new_value.cpp  parser_test.cpp  parser_test.h  pool_test.cpp  samples.cpp  samples.h  scratch_test.cpp  sema_test.cpp  ssa_test.cpp  standalone_main.cpp  (+5 more)
tests/cases/: AA_cases_vm.cpp  AA_cases_vm.h  migrated.cpp
(+480 files in other folders)
